--- a/UserServiceApplication/src/main/resources/application.properties
+++ b/UserServiceApplication/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/lms
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
+
+spring.application.name=users
