--- a/UserServiceApplication/src/main/resources/application.properties
+++ b/UserServiceApplication/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 
-spring.application.name=user-service
+spring.application.name=users
