--- a/UserServiceApplication/src/main/resources/application.properties
+++ b/UserServiceApplication/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port=9002
-
-spring.datasource.url=jdbc:mysql://localhost:3306/lms
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=update
-
-spring.application.name=users
+#server.port=9002
+#
+#spring.datasource.url=jdbc:mysql://localhost:3306/lms
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.jpa.hibernate.ddl-auto=update
+#
+#spring.application.name=users
