--- a/UserServiceApplication/src/main/resources/application.yml
+++ b/UserServiceApplication/src/main/resources/application.yml
@@ -5,4 +5,4 @@ spring:  datasource:    url: 'jdbc:mysql://localhost:3306/lms'
     username: root
     password: root
   jpa:    hibernate:      ddl-auto: update
-  application:    name: users    
+  application:    name: user-service    
